fix alignment and added button effects

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
   margin: 0;
@@ -21,6 +21,7 @@ code {
 
 .home-header {
   padding-top: 80px !important;
+  padding-left: 55px !important;
 }
 
 .home-section {
@@ -42,15 +43,12 @@ code {
   color: black;
   font-size: 4em !important; /* originally 2.4 em */
   /*padding-left: 50px !important;*/
-  padding-left: 46px;
   font-family: "Poppins";
-  
 }
 
 .heading-name {
   color: black;
   font-size: 3em !important; /* originally 2.5 em */
-  padding-left: 45px;
   font-family: "Poppins";
   position: relative;
 }
@@ -60,15 +58,12 @@ code {
   font-size: 64px;
   position: relative;
   top: 4px;
-  
-
 }
 
 .Typewriter__wrapper {
   font-size: 32px !important; /*2.2em */
   color: #674023 !important; /*#f9c87c */
   font-weight: 600 !important;
-  padding-left: 55px;
   font-family: "Poppins";
 }
 .Typewriter__cursor {
@@ -146,6 +141,38 @@ code {
   bottom: calc(var(--border-size) * -3);
 }
 
+.button-container-upload {
+  z-index: 1;
+  display: block;
+  width: 200px;
+  margin: 70px auto;
+  position: relative;
+  padding: 20px;
+  border-radius: 24px;
+  --background-color: black;
+  --border-size: 2px;
+  font-size: 25px;
+}
+
+.button-container-upload::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  border-radius: 24px;
+  border: var(--border-size) solid var(--background-color);
+  transition: top, left, right, bottom, 100ms ease-in-out;
+}
+.button-container-upload:hover::before,
+.button-container-upload:focus::before {
+  top: calc(var(--border-size) * -3);
+  left: calc(var(--border-size) * -3);
+  right: calc(var(--border-size) * -3);
+  bottom: calc(var(--border-size) * -3);
+}
 button {
   display: block;
   cursor: pointer;
@@ -197,6 +224,7 @@ button {
   padding: 9rem 0 2rem !important;
   text-align: center;
   position: relative;
+  bottom: 10%;
 }
 
 /*Column on right side*/
@@ -204,6 +232,7 @@ button {
   padding: 9rem 0 2rem !important;
   text-align: left;
   position: relative;
+  bottom: 10%;
 }
 
 .choose-file-container {
@@ -257,6 +286,6 @@ button {
   background-color: white;
   border-radius: 5%;
   margin: 0 50px;
-  height: 700px;
+  height: 70vh;
 }
 /*End up uploads*/
